# whisper-asr-webservice

./: Dockerfile.gpu  pyproject.toml  requirements.txt
app/: webservice.py
app/faster_whisper/: core.py
